Fixed spacing of navigation bar. Changed title to all-caps. Started Contact page.

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
   width: 960px;
-  padding: 50px 0;
+  padding: 25px 0;
   margin: 0 auto;
   font-family: "Trebuchet MS",sans-serif;
 }
@@ -18,8 +18,9 @@ nav ul li {
 
 nav ul li a {
   display: inline-block;
-  padding: 0 10px;
-  
+  width: 65px;
+  padding: 0 0px;
+
 }
 
 nav ul li a img {
@@ -49,7 +50,7 @@ nav ul li a:active {
 
 .tooltip {
   visibility:hidden;
-  font-size:10px;
+  font-size:12px;
 }
 
 .menu:hover + .tooltip {
